fixed overlap

--- a/src/features/user/UserProfile/styles/UserInfo.module.scss
+++ b/src/features/user/UserProfile/styles/UserInfo.module.scss
@@ -118,6 +118,7 @@
 // share button
 .shareBtnContainer {
   // display: inline-grid
+  margin-left: 30px;
   position: relative;
   transition-timing-function: ease-in;
 }
